# ADBRAGTEST

./: .env.example  .gitignore  .pre-commit-config.yaml  PRD.md  README.md  ROADMAP.md  app.py  justfile  pyproject.toml  pyrightconfig.json
config/: chunking_config.yaml  llm_config.yaml  prompt_templates.yaml  retrieval_config.yaml
notebooks/: 01_ingestion.py  02_embedding.py  03_rag_pipeline.py
src/ingestion/: chunker.py  parser.py  uploader.py
src/pipeline/: rag.py
src/utils/: config_loader.py  install_cluster_libs.py  logger.py
tasks/: 002-python-dev-setup.md  003-git-project-setup.md  004-pdf-upload-parse.md  005-chunking-delta-table.md  011-gradio-ui.md
